# chat_analytics_service_new_1

./: README.md  config.py  pyproject.toml
src/app/: main.py
src/app/api/v1/: routers.py
src/app/api/v1/endpoints/: get_all_chats.py  get_detailed_messages.py
src/data/: chats_wo_messages.json  raw_messages.json
src/models/: dasboard_models.py
src/services/: get_all_chats_manager.py  get_detailed_messages_manager.py
