[tool.poetry]
name = "chat_analytics_service_new_1"
version = "0.1.0"
description = ""
authors = ["hande-k <handekafkas7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pymongo = "^4.8.0"
pydantic = "^2.9.2"
pytz = "^2024.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
